src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                <fullName>Sales and Customer Experience</fullName>
                </value>
                <value>
                <fullName>Digital Services and Customer Experience</fullName>
                </value>
                <value>
                <fullName>Telemarketing</fullName>
                </value>
                <value>
                <fullName>Technical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ideas_Token__c</fullName>
        <label>Ideas Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCC_Department__c</fullName>
        <label>TCC Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                <fullName>Sales and Customer Experience</fullName>
                </value>
                <value>
                <fullName>Digital Services and Customer Experience</fullName>
                </value>
                <value>
                <fullName>Telemarketing</fullName>
                </value>
                <value>
                <fullName>Technical</fullName>
                </value>
                <value>
                <fullName>System</fullName>
                </value>
                <value>
                <fullName>Customer Insight</fullName>
                </value>
                <value>
                    <fullName>Reader Relations</fullName>
                </value>
                <value>
                    <fullName>Business Solutions</fullName>
                    <isActive>false</isActive>
                    <label>Business Solutions</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                <fullName>Digital Services</fullName>
                </value>
                <value>
                <fullName>Customer Insight</fullName>
                </value>
                <value>
                <fullName>Business Solutions</fullName>
                </value>
                <value>
                <fullName>Fulfilment</fullName>
                </value>
                <value>
                <fullName>Sales 1</fullName>
                </value>
                <value>
                <fullName>Sales 2</fullName>
                </value>
                <value>
                <fullName>Sales 3</fullName>
                </value>
                <value>
                <fullName>Telemarketing 1</fullName>
                </value>
                <value>
                <fullName>Telemarketing 2</fullName>
                </value>
                <value>
                <fullName>Customer Services</fullName>
                </value>
                <value>
                <fullName>Outbound Retentions</fullName>
                </value>
                <value>
                    <fullName>Reader Relations</fullName>
                </value>
                <value>
                    <fullName>Fulfillment</fullName>
                    <isActive>false</isActive>
                    <label>Fulfillment</label>
                </value>
                <value>
                <fullName>Quality Assurance</fullName>
                <isActive>false</isActive>
                    <label>Quality Assurance</label>
                </value>
                <value>
                <fullName>Sales Admin</fullName>
                <isActive>false</isActive>
                    <label>Sales Admin</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Telephony_Id__c</fullName>
        <label>Telephony Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <label>Active SFDC Users</label>
    </listViews>
    <listViews>
        <fullName>ActiveUserswithemail</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users with email</label>
    </listViews>
    <listViews>
        <fullName>Active_Mob_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MOBILE_USER</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Mobile Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Custom: Ideas Only Portal User</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>TMG Ideas Portal User</value>
        </filters>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>Ideas_portal_users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>startsWith</operation>
            <value>TMG Ideas</value>
        </filters>
        <label>Ideas portal users</label>
    </listViews>
    <listViews>
        <fullName>Never_Logged_In</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Never Logged In</label>
    </listViews>
    <listViews>
        <fullName>Super_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Super</value>
        </filters>
        <label>Super Users</label>
    </listViews>
    <listViews>
        <fullName>TMG_Standard_User_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>TMG Standard User</value>
        </filters>
        <label>TMG Standard User Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TMG_Subs_Administrator_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>TMG Subs Administrator</value>
        </filters>
        <label>TMG Subs Administrator Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TMG_Super_User_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>TMG Super User</value>
        </filters>
        <label>TMG Super User Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>inactive_users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>inactive users</label>
    </listViews>
</CustomObject>